--- a/source/less/blocks/hero.less
+++ b/source/less/blocks/hero.less
@@ -1,14 +1,15 @@
 .page-header {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #ffffff;
 }
 
 .hero__title {
-  background: url(source/img/bg-back-mobile@1x.jpg) no-repeat;
+  background: url("source/img/bg-back-mobile@1x.jpg") no-repeat;
   font-weight: lighter;
   font-size: 24px;
   padding: 102px 0 0 0;
   margin: 0;
+
   &--main {
     padding: 175px 0 0 0;
   }
@@ -55,14 +56,15 @@
 
 .device__link {
   text-decoration: none;
+
   &--ios {
-    background: url(source\img\logo-apple.svg) center no-repeat;
+    background: url("source\img\logo-apple.svg") center no-repeat;
   }
   &--android {
-    background: url(source\img\logo-android.svg) center no-repeat;
+    background: url("source\img\logo-android.svg") center no-repeat;
   }
   &--windows {
-    background: url(source\img\logo-windows.svg) center no-repeat;
+    background: url("source\img\logo-windows.svg") center no-repeat;
   }
 }
 
