--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -1,5 +1,5 @@
 .information {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: normal;
   color: #283645;
 }
