--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,5 +1,5 @@
 .page-header {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: bold;
   background-color: #283645;
   color: #ffffff;
