--- a/source/less/blocks/pop-up.less
+++ b/source/less/blocks/pop-up.less
@@ -1,7 +1,7 @@
 .pop-up {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #ffffff;
-  box-shadow: 0 0 15px rgba(0,0,0,0.5);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
   padding: 0;
   margin: 0;
 }
@@ -30,6 +30,7 @@
 .pop-up__button-place {
   padding: 0;
   margin: 0;
+
   &--success {
     background-color: #f2f2f2;
     padding: 48px 0;
@@ -49,6 +50,7 @@
   padding: 25px 0;
   margin: 0 auto;
   width: 280px;
+
   &:hover {
     background-color: #1c9b5e;
   }
