--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -1,5 +1,5 @@
 .review {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #ffffff;
   color: #283645;
 }
