--- a/source/less/blocks/user-posts.less
+++ b/source/less/blocks/user-posts.less
@@ -1,5 +1,5 @@
 .users-posts {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #ffffff;
   color: #283645;
   padding: 0;
@@ -11,6 +11,7 @@
   width: 280px;
   padding: 0;
   margin: 20px auto;
+
   &--pano {
     width: 100%;
     position: relative;
@@ -36,6 +37,7 @@
   height: 180px;
   overflow: hidden;
   box-sizing: border-box;
+
   &--pano {
     width: 100%;
     height: 137px;
@@ -96,6 +98,7 @@
   color: #d22856;
   padding: 0 0 0 30px;
   margin: 0;
+
   &::before {
     content: "";
     position: absolute;
@@ -103,6 +106,6 @@
     height: 12px;
     top: 0;
     left: 0;
-    background: url(source/img/icon-heart.svg) no-repeat;
+    background: url("source/img/icon-heart.svg") no-repeat;
   }
 }
