--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,5 +1,5 @@
 .contacts {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #ffffff;
   margin: 0;
   padding: 40px 20px;
