--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -1,5 +1,5 @@
 .page__description {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 14px;
   line-height: 30px;
   font-weight: normal;
