--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,8 +1,9 @@
 .page-footer {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #ffffff;
   margin: 0;
   padding: 40px 59px;
+
   &--mobile-hidden {
     display: none;
   }
@@ -15,9 +16,11 @@
 }
 
 .page-header__logo-image {
+
   &:hover {
     fill: #d22856;
   }
+
   &:active {
     opacity: 0.3;
   }
@@ -43,14 +46,15 @@
   height: 45px;
   border: 3px solid #e9ebec;
   border-radius: 50px;
+
   &--twitter {
-    background: url(source/img/icon-twitter.svg) center no-repeat;
+    background: url("source/img/icon-twitter.svg") center no-repeat;
   }
   &--facebook {
-    background: url(source/img/icon-facebook.svg) center no-repeat;
+    background: url("source/img/icon-facebook.svg") center no-repeat;
   }
-  &--twitter {
-    background: url(source/img/icon-youtube.svg) center no-repeat;
+  &--youtube {
+    background: url("source/img/icon-youtube.svg") center no-repeat;
   }
   &:hover {
     border: 3px solid #283645;
@@ -75,6 +79,7 @@
 
 .page-footer__academy-logo {
   fill: #d22856;
+
   &:hover {
     fill: #283645;
   }
