--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,5 +1,5 @@
 .form-competition {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #283645;
   margin: 0;
   padding: 0;
@@ -8,6 +8,7 @@
 .form-competition__set {
   padding: 42px 20px;
   margin: 0 auto;
+
   &--light {
     background-color: #ffffff;
   }
@@ -69,6 +70,7 @@
   padding: 25px 0;
   margin: 0 auto;
   width: 280px;
+
   &:hover {
     background-color: #1c9b5e;
   }
