--- a/source/less/blocks/hook.less
+++ b/source/less/blocks/hook.less
@@ -1,5 +1,5 @@
 .section-header {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #283645;
   background-color: #ffffff;
 }
