--- a/source/less/blocks/send-form.less
+++ b/source/less/blocks/send-form.less
@@ -1,5 +1,5 @@
 .user-upload {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #f2f2f2;
   padding: 20px;
   margin: 0;
@@ -34,9 +34,11 @@
 
 .edit__tool {
   fill: rgba(40, 54, 69, 0.3);
+
   &--active {
     fill: #d22856;
   }
+
   &:hover {
     fill: rgba(40, 54, 69, 0.5);
   }
@@ -62,25 +64,31 @@
   font-weight: bold;
   padding: 17px;
   margin: 12px auto;
+
   &--upload {
     border: 3px solid #d22856;
     color: #d22856;
+
     &:hover {
       background-color: #d22856;
       color: #ffffff;
     }
+
     &:active {
       background-color: #d22856;
       color: rgba(225, 225, 225, 0.3);
     }
   }
+
   &--cancel {
     opacity: 0.1;
     border: 3px solid #283645;
     color: #283645;
+
     &:hover {
       opacity: 0.3;
     }
+
     &:active {
       opacity: 0.3;
       background-color: #283645;
