--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,18 +1,25 @@
-@import "body.less";
-@import "slider.less";
-@import "visually-hidden.less";
-@import "page-header.less";
-@import "hero.less";
-@import "hook.less";
-@import "description.less";
-@import "information.less";
-@import "review.less";
-@import "price.less";
-@import "user-posts.less";
-@import "form.less";
-@import "send-form.less";
-@import "pop-up.less";
-@import "contacts.less";
-@import "map.less";
-@import "footer.less";
 @import "fonts.less";
+@import "blocks/global.less";
+@import "blocks/visually-hidden.less";
+@import "blocks/slider.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/hero.less";
+@import "blocks/device.less";
+@import "blocks/section-header.less";
+@import "blocks/features.less";
+@import "blocks/description.less";
+@import "blocks/information.less";
+@import "blocks/review.less";
+@import "blocks/price.less";
+@import "blocks/packages.less";
+@import "blocks/user-posts.less";
+@import "blocks/user-upload.less";
+@import "blocks/form-competition.less";
+@import "blocks/edit-photo.less";
+@import "blocks/pop-up.less";
+@import "blocks/contacts.less";
+@import "blocks/contacts-list.less";
+@import "blocks/map.less";
+@import "blocks/social.less";
+@import "blocks/page-footer.less";
