--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -1,10 +1,9 @@
-.page__description {
-  font-family: "Open Sans", sans-serif;
-  font-size: 14px;
-  line-height: 30px;
-  font-weight: normal;
-  color: #283645;
+.description {
   background-color: #ffffff;
-  padding: 55px 20px;
+  color: #283645;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 30px;
   margin: 0;
+  padding: 55px 20px;
 }
