--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,38 +1,16 @@
 .page-header {
-  font-family: "Open Sans", sans-serif;
-  font-weight: bold;
   background-color: #283645;
   color: #ffffff;
+  font-weight: bold;
   margin: 0;
   padding: 0;
-}
-
-.main-nav {
-  font-size: 18px;
-  line-height: 32px;
-}
-
-.main-nav__top {
-  padding: 20px;
-  margin: 0;
-  border-bottom: 1px solid #000000;
 }
 
 .page-header__menu {
-  border: none;
   background-color: transparent;
+  border: none;
 }
 
-.main-nav__list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.main-nav__item {
-  padding: 0;
-  margin: 25px auto;
-  border-bottom: 1px solid #000000;
-  border-top: 1 solid #485461;
+.page-header__logo {
   text-decoration: none;
 }
