--- a/source/less/blocks/user-posts.less
+++ b/source/less/blocks/user-posts.less
@@ -1,54 +1,53 @@
 .users-posts {
-  font-family: "Open Sans", sans-serif;
   background-color: #ffffff;
   color: #283645;
-  padding: 0;
-  margin: 0;
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .users-posts__item {
-  width: 280px;
-  padding: 0;
   margin: 20px auto;
+  padding: 0;
+  width: 280px;
 
   &--pano {
-    width: 100%;
     position: relative;
+    width: 100%;
   }
 }
 
 .users-posts__title {
-  position: absolute;
-  top: 0;
-  right: 20px;
-  font-size: 12px;
-  line-height: 24px;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: #ffffff;
   background-color: #d22856;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 24px;
   margin: 0;
   padding: 13px 20px;
+  position: absolute;
+  right: 20px;
+  top: 0;
+  text-transform: uppercase;
 }
 
 .users-posts__photo {
-  width: 280px;
+  box-sizing: border-box;
   height: 180px;
   overflow: hidden;
-  box-sizing: border-box;
+  width: 280px;
 
   &--pano {
-    width: 100%;
     height: 137px;
+    width: 100%;
   }
 }
 
 .users-posts__image {
-  width: 100%;
   height: 100%;
   margin: 0;
   object-fit: cover;
+  width: 100%;
 }
 
 .users-posts__article {
@@ -59,53 +58,53 @@
 }
 
 .users-posts__head {
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 .users-posts__author {
   font-size: 14px;
-  line-height: 24px;
   font-weight: bold;
-  padding: 0;
+  line-height: 24px;
   margin: 0;
+  padding: 0;
 }
 
 .users-posts__time {
   font-size: 12px;
-  line-height: 24px;
   font-weight: lighter;
-  text-transform: uppercase;
-  padding: 0;
+  line-height: 24px;
   margin: 0;
+  padding: 0;
+  text-transform: uppercase;
 }
 
 .users-posts__description {
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: normal;
   color: #283645;
-  padding: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 24px;
   margin: 14px 0;
+  padding: 0;
 }
 
 .users-posts__like {
-  position: relative;
-  font-size: 12px;
-  line-height: 24px;
-  font-weight: normal;
-  text-transform: uppercase;
   color: #d22856;
-  padding: 0 0 0 30px;
+  font-size: 12px;
+  font-weight: normal;
+  line-height: 24px;
   margin: 0;
+  padding: 0 0 0 30px;
+  position: relative;
+  text-transform: uppercase;
 
   &::before {
+    background: url("../img/icon-heart.svg") no-repeat;
     content: "";
-    position: absolute;
-    width: 13px;
     height: 12px;
-    top: 0;
     left: 0;
-    background: url("source/img/icon-heart.svg") no-repeat;
+    position: absolute;
+    top: 0;
+    width: 13px;
   }
 }
