--- a/source/less/blocks/device.less
+++ b/source/less/blocks/device.less
@@ -9,22 +9,13 @@
   margin: 0 auto;
   padding: 0;
   width: 56px;
-
-  &--ios {
-    background: url("../img/logo-apple.svg") center no-repeat;
-  }
-
-  &--android {
-    background: url("../img/logo-android.svg") center no-repeat;
-  }
-
-  &--windows {
-    background: url("../img/logo-microsoft.svg") center no-repeat;
-  }
 }
 
 .device__link {
+  display: block;
+  height: 56px;
   text-decoration: none;
+  width: 56px;
 
   &--ios {
     background: url("../img/logo-apple.svg") center no-repeat;
