--- a/source/less/blocks/form-competition.less
+++ b/source/less/blocks/form-competition.less
@@ -10,10 +10,12 @@
 
   &--light {
     background-color: #ffffff;
+    color: #283645;
   }
 
   &--dark {
     background-color: #f2f2f2;
+    color: #283645;
   }
 }
 
@@ -56,33 +58,6 @@
   line-height: 30px;
   margin: 43px 0;
   padding: 0;
-}
-
-.form-competition__send-form {
-  background-color: #2aab6d;
-  border: none;
-  border-radius: 2px;
-  color: #ffffff;
-  font-size: 18px;
-  font-weight: bold;
-  line-height: 30px;
-  margin: 0 auto;
-  padding: 25px 0;
-  text-transform: uppercase;
-  width: 280px;
-
-  &:hover {
-    background-color: #1c9b5e;
-  }
-
-  &:active {
-    background-color: #1c9b5e;
-    color: rgba(255, 255, 255, 0.3);
-  }
-
-  &:disabled {
-    background-color: #e5e5e5;
-  }
 }
 
 .form-competition__note {
