--- a/source/less/blocks/hero.less
+++ b/source/less/blocks/hero.less
@@ -41,13 +41,8 @@
   padding: 28px, 20px;
 }
 
-.hero__download-buttom {
+.hero__download-button {
   border: 3px solid #ffffff;
-  border-radius: 50px;
-  color: #ffffff;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 18px;
   margin: 0 auto;
   padding: 17px 36px;
   text-decoration: none;
@@ -56,6 +51,7 @@
     background-color: #ffffff;
     color: #d22856;
   }
+
   &:active {
     color: rgba(210, 40, 86, 0.3);
   }
