--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -17,7 +17,7 @@
 
 .main-nav__item {
   border-bottom: 1px solid #000000;
-  border-top: 1 solid #485461;
+  border-top: 1px solid #485461;
   margin: 25px auto;
   padding: 0;
   text-decoration: none;
