--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,10 +1,11 @@
 @import "fonts.less";
-@import "blocks/global.less";
+@import "global.less";
 @import "blocks/visually-hidden.less";
 @import "blocks/slider.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/hero.less";
+@import "blocks/round-button.less";
 @import "blocks/device.less";
 @import "blocks/section-header.less";
 @import "blocks/features.less";
@@ -13,8 +14,9 @@
 @import "blocks/review.less";
 @import "blocks/price.less";
 @import "blocks/packages.less";
-@import "blocks/user-posts.less";
+@import "blocks/users-posts.less";
 @import "blocks/user-upload.less";
+@import "blocks/btn-form.less";
 @import "blocks/form-competition.less";
 @import "blocks/edit-photo.less";
 @import "blocks/pop-up.less";
