--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,20 +1,20 @@
 @font-face {
   font-family: "Open Sans";
-  src: url("source/fonts/opensans.woff") format("woff"), url("source/fonts/opensans.woff2") format("woff2"),;
+  src: url("../fonts/opensans.woff") format("woff"), url("../fonts/opensans.woff2") format("woff2"),;
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("source/fonts/opensansbold.woff") format("woff"), url("source/fonts/opensansbold.woff2") format("woff2"),;
+  src: url("../fonts/opensansbold.woff") format("woff"), url("../fonts/opensansbold.woff2") format("woff2"),;
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("source/fonts/opensanslight.woff") format("woff"), url("source/fonts/opensanslight.woff2") format("woff2"),;
+  src: url("../fonts/opensanslight.woff") format("woff"), url("../fonts/opensanslight.woff2") format("woff2"),;
   font-weight: lighter;
   font-style: normal;
 }
