Верстаем адаптивные сетки

--- a/source/less/blocks/btn-form.less
+++ b/source/less/blocks/btn-form.less
@@ -7,7 +7,7 @@
   font-weight: bold;
   line-height: 30px;
   margin: 0 auto;
-  padding: 25px 0;
+  padding: 17px 0;
   text-transform: uppercase;
   width: 280px;
 
@@ -23,4 +23,14 @@
   &:disabled {
     background-color: #e5e5e5;
   }
+}
+
+@media (min-width: @tablet-width) {
+  .btn-form {
+    width: 298px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+
 }
