--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -2,17 +2,27 @@
   background-color: #f2f2f2;
   color: #283645;
   margin: 0;
-  padding: 0 20px;
+  overflow:hidden;
+  padding: 60px 30px 310px;
+  position: relative;
 }
 
 .features__list {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
 .features__item {
-  margin: 20px 0;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 12px 0;
   padding: 0;
 }
 
@@ -21,19 +31,112 @@
   font-size: 18px;
   font-weight: bold;
   line-height: 24px;
-  margin: 15px auto;
+  margin: 11px auto;
   padding: 0;
+  text-align: center;
 }
 
 .features__description {
   font-size: 14px;
   font-weight: lighter;
-  line-height: 24px;
-  margin: 5px auto;
+  line-height: 23px;
+  margin: 0 auto;
   padding: 0;
+  text-align: center;
+}
+
+.features__pic {
+  bottom: -38px;
+  box-sizing: border-box;
+  display: none;
+  height: 315px;
+  left: 0;
+  margin: 0 auto;
+  order: 2;
+  position: absolute;
+  right: 0;
+  width: 157px;
+  &--mobile {
+    display: block;
+  }
 }
 
 .features__image {
+  height: auto;
   margin: 0 auto;
   padding: 0;
+  object-fit: cover;
+  width: 100%;
+}
+
+@media (min-width: @tablet-width) {
+
+  .features {
+    padding: 50px 35px 30px;
+  }
+  .features__list {
+    float: right;
+    width: 295px;
+  }
+  .features__item {
+    margin: 11px 0;
+  }
+  .features__title {
+    margin: 12px 0;
+    text-align: left;
+  }
+  .features__description {
+    line-height: 24px;
+    text-align: left;
+  }
+  .features__pic {
+    bottom: 0;
+    height: 481px;
+    left: 20px;
+    margin: 0;
+    width: 268px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .features {
+    padding: 0 134px 30px;
+  }
+
+  .features__list {
+    align-items: flex-start;
+    flex-direction: row;
+    float: none;
+    justify-content: space-between;
+    margin-top: -12px;
+    width: auto;
+  }
+
+  .features__item {
+    width: 292px;
+  }
+
+  .features__pic {
+    display: block;
+    height: 302px;
+    margin: 0;
+    order: 0;
+    position: static;
+    width: 292px;
+  }
+
+  .features__title {
+    font-size: 30px;
+    line-height: 30px;
+    margin: 55px 0 24px;
+    padding: 0 26px;
+    text-align: center;
+  }
+
+  .features__description {
+    font-size: 18px;
+    line-height: 30px;
+    padding: 0 28px;
+    text-align: center;
+  }
 }
