--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -5,5 +5,17 @@
 .information__header {
   background-color: #ffffff;
   padding: 0 20px;
-  margin: 0;
+  margin: 40px auto 30px;
+}
+
+@media (min-width: @tablet-width) {
+  .information__header {
+    margin: 49px auto;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .information__header {
+    margin: 68px auto 77px
+  }
 }
