--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,29 +1,238 @@
 .main-nav {
+  color: #ffffff;
   font-size: 18px;
+  font-weight: bold;
   line-height: 32px;
+  margin-bottom: -70px;
+  position: relative;
+  z-index: 9;
+}
+
+.main-nav__logo {
+  box-sizing: border-box;
+  height: 22px;
+  text-decoration: none;
+  width: 75px;
+}
+
+.main-nav__logo-image {
+  object-fit: contain;
+  fill: #ffffff;
+
+  &:hover {
+    fill: #d22856;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.main-nav__menu {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  height: 24px;
+  width: 50px;
+}
+
+.main-nav--closed .main-nav__menu::before {
+  background-color: #ffffff;
+  box-shadow: 0 10px 0 0 #ffffff, 0 20px 0 0 #ffffff;
+  content: "";
+  height: 4px;
+  position: absolute;
+  right: 20px;
+  top: 22px;
+  width: 50px;
+}
+
+.main-nav--closed .main-nav__toggle:active::before {
+  background-color: rgba(210, 40, 86, 0.3);
+  box-shadow: 0 10px 0 0 rgba(210, 40, 86, 0.3), 0 20px 0 0 rgba(210, 40, 86, 0.3);
+}
+
+
+.main-nav--closed .main-nav__toggle:hover::before {
+  background-color: #d22856;
+  box-shadow: 0 10px 0 0 #d22856, 0 20px 0 0 #d22856;
+}
+
+.main-nav--opened .main-nav__menu {
+
+  &::before,
+  &::after {
+    background-color: #ffffff;
+    content: "";
+    height: 5px;
+    right: 15px;
+    position: absolute;
+    top: 30px;
+    width: 31px;
+  }
+
+  &::before {
+    box-shadow: none;
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+
+  &:active::before,
+  &:active::after {
+    background-color: rgba(210, 40, 86, 0.3);
+  }
+
+  &:hover::before,
+  &:hover::after {
+    background-color: #d22856;
+  }
+
+  &:focus::before,
+  &:focus::after {
+    background-color: #d22856;
+  }
+
+  &:focus {
+    outline: none;
+  }
+}
+
+.main-nav--nojs .main-nav__menu {
+  display: none;
 }
 
 .main-nav__top {
+  align-items: center;
+  background-color: #283645;
   border-bottom: 1px solid #000000;
+  display: flex;
+  justify-content: space-between;
   margin: 0;
-  padding: 20px;
+  padding: 23px 20px;
+}
+
+.main-nav--opened .main-nav__top {
+  background-color: #283645;
+}
+
+.main-nav--closed .main-nav__top {
+  background-color: rgba(0, 0, 0, 0.3);
+  border: none;
 }
 
 .main-nav__list {
+  background-color: #283645;
+  display: flex;
+  flex-direction: column;
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
+.main-nav--nojs .main-nav__list {
+  display: flex;
+}
+
 .main-nav__item {
   border-bottom: 1px solid #000000;
   border-top: 1px solid #485461;
-  margin: 25px auto;
-  padding: 0;
+  margin: 0 auto;
+  padding: 15px 0;
+  text-align: center;
   text-decoration: none;
+  text-transform: uppercase;
+  width: 100%;
+
+  &:hover {
+    color: #d22856;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .main-nav__link {
   color: #ffffff;
   text-decoration: none;
+
+  &:hover {
+    color: #d22856;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav {
+    margin-bottom: -109px;
+  }
+  .main-nav__top {
+    padding: 42px 20px;
+  }
+  .main-nav--closed .main-nav__menu::before {
+    top: 44px;
+  }
+  .main-nav--opened .main-nav__menu {
+
+    &::before,
+    &::after {
+      top: 54px;
+    }
+  }
+}
+
+@media (max-width: @tablet-width-max) {
+  .main-nav--closed .main-nav__list {
+    display: none;
+  }
+  .main-nav--closed .main-nav__list {
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav {
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    font-weight: normal;
+    justify-content: space-between;
+    margin-bottom: -110px;
+    padding: 0 90px;
+  }
+ .main-nav__menu {
+    display: none;
+  }
+  .main-nav__top {
+    border: none;
+    margin: 0 38px;
+    padding: 0;
+  }
+  .main-nav__list {
+    background-color: transparent;
+    border: none;
+    flex-direction: row;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  .main-nav__item {
+    border: none;
+    margin: 23px 42px;
+    text-transform: none;
+    width: auto;
+
+    &--active {
+    border-bottom: 2px solid #ffffff;
+    }
+  }
+  .main-nav--opened .main-nav__top {
+    background-color: transparent;
+  }
 }
