--- a/source/less/blocks/contacts-list.less
+++ b/source/less/blocks/contacts-list.less
@@ -1,11 +1,15 @@
 .contacts-list {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   list-style: none;
   margin: 0 auto;
   padding: 0;
 }
 
 .contacts-list__item {
-  margin: 28px 0;
+  margin: 9px 0;
   padding: 0;
 }
 
@@ -15,6 +19,7 @@
   font-weight: bold;
   margin: 0 auto;
   padding: 0;
+  text-align: center;
 }
 
 .contacts-list__address {
@@ -23,4 +28,60 @@
   font-weight: lighter;
   margin: 0 auto;
   padding: 0;
+  text-align: center;
+
+  &--link {
+    color: #d22856;
+    text-decoration: none;
+
+    &:hover {
+      color: #283645;
+      text-decoration: underline;
+    }
+
+    &:active {
+      color: #283645;
+      opacity: 0.3;
+      text-decoration: none;
+    }
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .contacts-list {
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .contacts-list__item {
+    margin: 23px 32px;
+    width: 245px;
+  }
+  .contacts-list__address {
+    line-height: 31px;
+    margin: 3px auto;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts-list {
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 32px;
+    padding: 0 106px;
+  }
+  .contacts-list__item {
+    margin: 23px 32px 0;
+
+    &--mail {
+      order: 1;
+    }
+  }
+  .contacts-list__title {
+    margin-bottom: 23px;
+  }
+  .contacts-list__address {
+    margin: 0px auto;
+  }
 }
