--- a/source/less/blocks/device.less
+++ b/source/less/blocks/device.less
@@ -1,7 +1,11 @@
 .device {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
   list-style: none;
-  margin: 30px auto;
+  margin: 34px auto 20px;
   padding: 0;
+  width: 240px;
 }
 
 .device__item {
@@ -37,4 +41,21 @@
   line-height: 24px;
   margin: 0 auto;
   padding: 0;
+  text-align: center;
+}
+
+@media (min-width: @tablet-width) {
+  .device {
+    margin: 46px auto 36px;
+  }
+  .device__download-description {
+    font-size: 18px;
+    line-height: 24px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .device {
+    margin: 52px auto 53px;
+  }
 }
