--- a/source/less/blocks/edit-photo.less
+++ b/source/less/blocks/edit-photo.less
@@ -1,27 +1,210 @@
 .edit-photo {
-  list-style: none;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin: 0 auto;
+  padding: 0 20px;
+}
+
+.edit-photo__tools-list {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 42px 0 0;
   padding: 0;
 }
 
-.edit-photo__item {
-  margin: 0;
+.edit-photo__tool-item {
+  display: block;
+  margin: 0 16px;
   padding: 0;
+  width: 48px;
 }
 
 .edit-photo__tool {
+  display: block;
   fill: rgba(40, 54, 69, 0.3);
+  text-align: center;
+
+  &:hover {
+    fill: rgba(40, 54, 69, 0.5);
+  }
 
   &--active {
     fill: #d22856;
   }
 
-  &:hover {
-    fill: rgba(40, 54, 69, 0.5);
+  &--contrast {
+    height: 32px;
+    width: 32px;
+  }
+}
+
+.edit-photo__range-list {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.edit-photo__range-item {
+  display: none;
+  margin: 16px 0;
+  padding: 0;
+
+  &--active {
+    display: inline-block;
   }
 }
 
 .edit-photo__range {
-  margin: 25px auto;
-  padding: 0;
+  -webkit-appearance: none;
+  width: 240px;
+  background: transparent;
+}
+
+.edit-photo__range::-ms-thumb {
+  border: 2px solid #d22856;
+  border-radius: 50px;
+  background: #f2f2f2;
+  cursor: pointer;
+  height: 14px;
+  width: 14px;
+}
+
+.edit-photo__range::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 2px solid #d22856;
+  border-radius: 50px;
+  background: #f2f2f2;
+  cursor: pointer;
+  margin-top: -6px;
+  height: 14px;
+  width: 14px;
+}
+
+.edit-photo__range::-moz-range-thumb {
+  border: 2px solid #d22856;
+  border-radius: 50px;
+  background: #f2f2f2;
+  cursor: pointer;
+  height: 14px;
+  width: 14px;
+}
+
+.edit-photo__range::-ms-track {
+  background: transparent;
+  color: transparent;
+  height: 2px;
+  width: 240px;
+}
+
+.edit-photo__range::-webkit-slider-runnable-track {
+  background: #283645;
+  height: 2px;
+  width: 100%;
+}
+
+.edit-photo__range::-moz-range-track {
+  width: 100%;
+  height: 8.4px;
+  background: #283645;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+
+@media (min-width: @tablet-width) {
+  .edit-photo {
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0;
+  }
+  .edit-photo__tools-list {
+    flex-direction: column;
+    margin: 0;
+  }
+  .edit-photo__tool-item {
+    border-bottom: 1px solid #dddfe0;
+    height: 22px;
+    margin: 19px 0 6px 0;
+    padding: 0 22px 24px 0px;
+    width: 22px;
+
+    &:first-child {
+      margin-top: 24px;
+    }
+  }
+  .edit-photo__tool {
+    fill: #d22856;
+
+    &:hover {
+      fill: #d22856;
+    }
+
+    &--contrast {
+      height: 16px;
+      width: 16px;
+    }
+  }
+  .edit-photo__range-list {
+    flex-direction: column;
+    margin: 0;
+  }
+  .edit-photo__range-item {
+    border-bottom: 1px solid #dddfe0;
+    display: block;
+    padding-bottom: 30px;
+    margin: 0;
+    margin-bottom: 19px;
+
+      &:first-child {
+        margin-top: 31px;
+      }
+    }
+  .edit-photo__range {
+    width: 202px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .edit-photo__tool-item {
+    height: 48px;
+    width: 48px;
+  }
+
+  .edit-photo__tool {
+
+    &--contrast {
+      height: 32px;
+      width: 32px;
+    }
+  }
+
+  .edit-photo__tool-item {
+    margin: 10px 0 4px 0;
+    padding: 0 39px 9px 0px;
+
+    &:first-child {
+      margin-top: 13px;
+    }
+  }
+
+  .edit-photo__range-item {
+    margin-bottom: 21px;
+    padding-bottom: 28px;
+    padding-right: 30px;
+
+    &:first-child {
+      margin-top: 38px;
+    }
+  }
+
+  .edit-photo__range {
+      width: 290px;
+  }
 }
