--- a/source/less/blocks/form-competition.less
+++ b/source/less/blocks/form-competition.less
@@ -1,12 +1,16 @@
 .form-competition {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   color: #283645;
   margin: 0;
   padding: 0;
 }
 
 .form-competition__set {
+  border: none;
   margin: 0 auto;
-  padding: 42px 20px;
+  padding: 20px 20px 25px;
 
   &--light {
     background-color: #ffffff;
@@ -16,6 +20,33 @@
   &--dark {
     background-color: #f2f2f2;
     color: #283645;
+    padding: 5px 20px 45px;
+  }
+}
+
+.form-competition__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  &--select {
+    margin-top: 110px;
+  }
+}
+
+.form-competition__item {
+  margin: 15px 0;
+  padding: 0;
+}
+
+.form-competition__select-item {
+  font-weight: normal;
+  margin: 0;
+  margin-top: 52px;
+  padding: 0;
+
+  &--radio {
+    margin-top: 44px;
   }
 }
 
@@ -24,7 +55,7 @@
   font-size: 14px;
   font-weight: normal;
   line-height: 30px;
-  margin: 17px 0;
+  margin: 10px 23px;
   padding: 0;
   text-transform: uppercase;
 }
@@ -32,31 +63,136 @@
 .form-competition__text {
   background-color: #ffffff;
   border: 2px solid #e5e5e5;
+  border-radius: 2px;
   color: #283645;
   font-size: 18px;
   font-weight: normal;
   line-height: 30px;
-  margin: 0 auto;
-  padding: 22px;
-  width: 276px;
+  margin: 3px auto;
+  padding: 15px 22px;
+  width: 232px;
+
+  &:hover {
+    border: 2px solid #283645;
+  }
+
+  &:active {
+    border: 2px solid #d22856;
+  }
 }
 
 .form-competition__title {
   color: #d22856;
   font-size: 14px;
+  float: left;
   font-weight: normal;
   line-height: 18px;
   margin: 0 auto;
   padding: 0;
+  text-align: center;
   text-transform: uppercase;
+
+  &--dark {
+    margin: 32px auto;
+    padding: 0 30px;
+
+    &--adress {
+      display: none;
+    }
+  }
 }
 
 .form-competition__item-label {
   color: #283645;
+  cursor: pointer;
   font-size: 18px;
   font-weight: normal;
   line-height: 30px;
   margin: 43px 0;
+  padding: 0;
+  padding-left: 70px;
+  position: relative;
+}
+
+.form-competition__checkbox {
+  display: none;
+}
+
+.form-competition__radio {
+  display: none;
+}
+
+.form-competition__item-label::before {
+  background: #ffffff;
+  border: 2px solid #e5e5e5;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 35px;
+  left: 0;
+  margin: auto;
+  padding: 0;
+  top: 0;
+  position: absolute;
+  width: 35px;
+  z-index: 1;
+}
+
+.form-competition__item-label--radio::before {
+  border-radius: 50px;
+}
+
+.form-competition__checkbox[type="checkbox"]:checked ~ .form-competition__item-label--checkbox::after {
+    border-color: #d22856;
+    border-top-style: none;
+    border-right-style: none;
+    bottom: 0;
+    height: 11px;
+    left: 0;
+    margin: auto;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    width: 22px;
+    z-index: 2;
+}
+
+.form-competition__checkbox[type="checkbox"]:hover ~ .form-competition__item-label--checkbox::before {
+    border: 2px solid #283645;
+}
+
+.form-competition__checkbox[type="checkbox"]:active ~ .form-competition__item-label--checkbox::before {
+    border: 2px solid #d22856;
+}
+
+.form-competition__comment-title {
+  color: #d22856;
+  display: block;
+  float: left;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 18px;
+  margin: 18px auto;
+  padding: 0;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.form-competition__comment {
+  background-color: #ffffff;
+  border: 2px solid #e5e5e5;
+  color: #283645;
+  font-size: 18px;
+  font-weight: normal;
+  height: 167px;
+  line-height: 30px;
+  margin: 0 auto;
+  padding: 15px 20px;
+  width: 237px;
+}
+
+.form-competition__button {
+  margin: 18px auto;
   padding: 0;
 }
 
@@ -65,11 +201,317 @@
   font-size: 14px;
   font-weight: normal;
   line-height: 30px;
-  margin: 44px auto;
+  margin: 16px auto;
   padding: 0;
   text-transform: uppercase;
 }
 
 .form-competition__colored-text {
   color: #d22856;
+}
+
+.form-competition__only-desktop {
+  display: none;
+}
+
+@media (min-width: @tablet-width) {
+  .form-competition__set {
+    border: 2px solid #e5e5e5;
+    border-radius: 2px;
+    padding: 0;
+    width: 617px;
+    margin-bottom: 50px;
+
+    &--dark {
+      background-color: #ffffff;
+      padding: 0px 56px 60px;
+      width: 504px;
+    }
+
+    &--name {
+      border: none;
+      margin-bottom: 0;
+      order: 0;
+    }
+
+    &--device {
+      order: 1;
+    }
+
+    &--adress {
+      order: 2;
+      padding: 29px 57px 0;
+      width: 200px;
+    }
+
+    &--achievements {
+      order: 3;
+      margin-bottom: 57px;
+      padding: 43px 56px 2px;
+    }
+
+    &--comment {
+      order: 4;
+      padding: 36px 58px 45px;
+      width: 200px;
+    }
+  }
+  .form-competition__list {
+    margin: 0 auto;
+
+    &--select {
+      margin: 0;
+    }
+  }
+  .form-competition__item {
+    display: flex;
+    margin: 0 auto;
+
+    &--name {
+      align-items: center;
+      flex-direction: row;
+      justify-content: space-between;
+      margin: 53px auto;
+    }
+
+    &--adress {
+      align-items: flex-start;
+      flex-direction: column-reverse;
+      justify-content: flex-start;
+      margin-bottom: 17px;
+    }
+  }
+  .form-competition__text {
+    margin: 0;
+
+    &--name {
+      flex-grow: 1;
+      padding: 14px 19px;
+    }
+
+    &--contacts {
+      width: 459px;
+      padding: 15px 20px;
+      position: relative;
+      z-index: 1;
+    }
+
+    &--phone::after {
+      background-image: url("../img/icon-phone.svg");
+      background-color: #e5e5e5;
+      content: "";
+      display: block;
+      height: 60px;
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: 60px;
+      z-index: 2;
+    }
+
+    &--mail::after {
+        background-image: url("../img/icon-mail.svg");
+        background-color: #e5e5e5;
+        content: "";
+        display: block;
+        height: 60px;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 60px;
+        z-index: 2;
+      }
+  }
+  .form-competition__text-label {
+
+    &--name {
+      margin: 0;
+      margin-right: 21px;
+    }
+  }
+  .form-competition__title {
+    font-size: 14px;
+    float: none;
+    line-height: 30px;
+    margin: 0 auto;
+    padding: 0 38px;
+
+    &--dark {
+      margin: 0 auto;
+    }
+
+    &--adress {
+      display: inline;
+      margin: 0 auto;
+    }
+  }
+  .form-competition__select-item {
+
+    &--radio {
+      margin-top: 44px;
+    }
+
+    &--achievement {
+      margin-bottom: 52px;
+      margin-top: 0;
+    }
+  }
+  .form-competition__item-label {
+    padding-left: 61px;
+  }
+  .form-competition__comment-title {
+    float: none;
+    padding: 0 38px;
+    margin: 0 auto;
+  }
+  .form-competition__comment {
+    height: 159px;
+    padding: 15px 17px;
+    width: 460px;
+  }
+  .form-competition__bottom {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    order: 5;
+    margin-bottom: 31px;
+    padding: 0 20px;
+  }
+  .form-competition__button {
+    margin: 18px 0;
+  }
+  .form-competition__note {
+    margin: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form-competition {
+    align-items: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 65px;
+    padding: 0 130px;
+  }
+
+  .form-competition__set {
+
+    &--name {
+      width: 46%;
+      margin: 0;
+      margin-top: 20px;
+    }
+
+    &--device {
+      width: 30%;
+      margin: 0;
+      padding: 0px 73px 60px;
+    }
+
+    &--adress {
+      padding: 29px 57px 4px;
+      width: 100%;
+    }
+
+    &--achievements {
+      padding: 43px 57px 47px;
+      width: 100%;
+    }
+
+    &--comment {
+      padding: 27px 58px 37px;
+      width: 100%;
+    }
+  }
+
+  .form-competition__list {
+
+    &--adress {
+      align-items: flex-start;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &--achievements {
+      align-items: flex-start;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      height: 121px;
+      justify-content: space-between;
+    }
+  }
+
+  .form-competition__item {
+
+    &--name {
+      margin: 0 auto 54px;
+
+      &:last-child {
+        margin-bottom: 51px;
+      }
+    }
+
+    &--adress {
+      margin: 0;
+    }
+  }
+
+  .form-competition__text {
+
+    &--name {
+      padding: 14px 19px;
+    }
+
+    &--contacts {
+      width: 332px;
+      padding: 14px 20px;
+    }
+  }
+
+  .form-competition__text-label {
+      margin: 10px 21px;
+  }
+
+  .form-competition__title {
+    font-size: 13px;
+    line-height: 30px;
+    padding: 0 17px;
+    white-space: nowrap;
+  }
+
+  .form-competition__select-item {
+
+    &--achievement {
+      margin: 0;
+      margin-bottom: 11px;
+      margin-right: 62px;
+      min-width: 262px;
+    }
+  }
+
+  .form-competition__comment-title {
+    font-size: 13px;
+    line-height: 30px;
+    padding: 0 17px;
+  }
+
+  .form-competition__comment {
+    height: 93px;
+    width: 95%;
+  }
+
+  .form-competition__bottom {
+    padding: 0;
+    margin-bottom: 0px;
+    margin-top: 15px;
+    width: 100%;
+  }
+  .form-competition__button {
+    margin: 0;
+  }
+  .form-competition__only-desktop {
+    display: inline;
+  }
 }
