--- a/source/less/blocks/hero.less
+++ b/source/less/blocks/hero.less
@@ -5,19 +5,25 @@
   color: #ffffff;
   font-size: 24px;
   font-weight: lighter;
+  min-height: 139px;
   margin: 0;
-  padding: 102px 0 0 0;
+  padding: 100px 30px 0;
 
   &--main {
-    padding: 175px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: auto;
+    padding: 173px 0 0;
   }
 }
 
 .hero__image {
-  height: 320px;
-  margin: 0 auto;
+  box-sizing: border-box;
+  height: 286px;
+  margin: 0;
   padding: 0;
-  width: 320px;
+  width: 258px;
 }
 
 .hero__picture {
@@ -27,24 +33,34 @@
   width: 100%;
 }
 
+.hero__title {
+  display: none;
+}
+
 .hero__text {
   color: #ffffff;
   font-size: 24px;
   font-weight: lighter;
+  line-height: 28px;
   margin: 0 auto;
   padding: 0;
+  text-align: center;
 }
 
 .hero__download {
+  position: static;
   background-color: #1d2631;
   margin: 0;
-  padding: 28px, 20px;
+  padding: 27px 19px 30px;
 }
 
 .hero__download-button {
   border: 3px solid #ffffff;
+  color: #ffffff;
+  display: inline-block;
   margin: 0 auto;
-  padding: 17px 36px;
+  padding: 15px 29px;
+  text-align: center;
   text-decoration: none;
 
   &:hover {
@@ -54,5 +70,85 @@
 
   &:active {
     color: rgba(210, 40, 86, 0.3);
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .hero {
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    min-height: 178px;
+    padding: 181px 19px 80px;
+    position: relative;
+
+    &--main {
+      padding-bottom: 0;
+      padding-top: 186px;
+    }
+  }
+  .hero__text {
+    font-size: 50px;
+    line-height: 59px;
+  }
+  .hero__image {
+    height: 542px;
+    margin-left: -17px;
+    width: 696px;
+  }
+  .hero__download {
+    background-color: transparent;
+    left: 1px;
+    position: absolute;
+    top: 141px;
+    width: 300px;
+  }
+  .hero__title {
+    display: inline-block;
+    font-size: 40px;
+    font-weight: lighter;
+    line-height: 46px;
+    margin: 36px auto;
+    padding: 0 30px;
+    text-align: center;
+  }
+  .hero__download-button {
+    padding: 15px 39px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .hero {
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+    padding: 175px 69px 41px;
+
+    &--main {
+      padding-bottom: 0;
+      padding-top: 209px;
+    }
+
+    &--photo {
+      padding: 175px 271px 41px;
+    }
+  }
+  .hero__image {
+    height: 644px;
+    margin: 0;
+    width: 808px;
+    margin-left: 243px;
+  }
+  .hero__download {
+    left: 111px;
+    top: 157px;
+  }
+  .hero__title {
+    font-size: 50px;
+    line-height: 59px;
+  }
+  .device__download-description {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .hero__download-button {
+    margin: 17px 0;
+    padding: 14px 21px;
   }
 }
