--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,6 +1,30 @@
 .map {
-  height: 205px;
+  background-image: url("./img/bg-map-mobile@1x.png");
+  background-position: 50% 100%;
+  box-sizing: border-box;
+  height: 200px;
   margin: 0;
   padding: 0;
   width: 100%;
+
+    iframe {
+      width: 100%;
+      height: 100%;
+    }
+}
+
+@media (min-width: @tablet-width) {
+  .map {
+    background-image: url("../img/bg-map-tablet@1x.jpg");
+    background-position: 42% 74%;
+    height: 375px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .map {
+    background-image: url("../img/bg-map-desktop@1x.jpg");
+    background-position: 50% 69%;
+    height: 500px;
+  }
 }
