--- a/source/less/blocks/packages.less
+++ b/source/less/blocks/packages.less
@@ -2,15 +2,6 @@
   border-collapse: collapse;
 }
 
-.packages__item {
-  border-right: 2px solid #e5e5e5;
-  border-left: 2px solid #e5e5e5;
-  margin: 0;
-  padding: 0;
-  text-transform: uppercase;
-  width: 276px;
-}
-
 .packages__header {
   background-color: #283645;
   border-bottom: 2px solid #e5e5e5;
@@ -18,9 +9,8 @@
   border-right: 2px solid #e5e5e5;
   color: #ffffff;
   margin: 0;
-  padding: 0;
+  padding: 20px 85px;
   position: relative;
-  width: 276px;
 
   &--hit::before {
     background: url("../img/bg-hit.svg") no-repeat;
@@ -41,6 +31,10 @@
     transform: rotate(-45deg);
     width: 74px;
   }
+
+  &--empty {
+    display: none;
+  }
 }
 
 .packages__title {
@@ -49,6 +43,7 @@
   line-height: 30px;
   margin: 0 auto;
   padding: 0;
+  text-transform: uppercase;
 }
 
 .packages__price {
@@ -56,11 +51,17 @@
   font-weight: lighter;
   line-height: 30px;
   margin: 0 auto;
+  min-width: 105px;
   padding: 0;
+}
+
+.packages__offer {
+  display: none;
 }
 
 .packages__description {
   margin: 0;
+  padding: 0;
 }
 
 .packages__include {
@@ -73,8 +74,10 @@
   font-weight: normal;
   line-height: 30px;
   margin: 0;
-  padding: 22px;
+  padding: 14px 21px;
   position: relative;
+  text-transform: uppercase;
+  width: 276px;
 
   &--true::after {
     background: url("../img/icon-yes.svg") no-repeat;
@@ -97,4 +100,124 @@
     top: 15px;
     width: 27px;
   }
+}
+
+.packages__comment {
+  padding: 0;
+  margin: 0;
+}
+
+@media (min-width: @tablet-width) {
+  .packages {
+    margin: 0 auto;
+  }
+  .packages__header {
+    padding: 9px 24px;
+    &--empty {
+      background-color: transparent;
+      border: none;
+      display: block;
+    }
+  }
+  .packages__title {
+    font-size: 16px;
+  }
+  .packages__price {
+    font-size: 18px;
+  }
+  .packages__include {
+    padding: 0;
+    width: auto;
+  }
+  .packages__offer {
+    background-color: #ffffff;
+    border: 2px solid #e5e5e5;
+    border-collapse: collapse;
+    display: table-cell;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 30px;
+    padding: 7px 15px;
+    width: 123px;
+  }
+  .packages__comment {
+    display: none;
+  }
+  .packages__include {
+
+    &--true::after {
+      bottom: 0;
+      left: 0;
+      margin: auto;
+      right: 0;
+      top: 0;
+    }
+
+    &--false::after {
+      bottom: 0;
+      left: 0;
+      margin: auto;
+      right: 0;
+      top: 0;
+    }
+  }
+  .packages__header {
+
+    &--hit::before {
+      background: url("../img/bg-hit-tablet.svg") no-repeat;
+      height: 61px;
+      width: 61px;
+    }
+
+    &--hit::after {
+      font-size: 14px;
+      font-weight: normal;
+      height: 61px;
+      left: 4px;
+      top: 3px;
+      width: 61px;
+    }
+  }
+  .price__toggles {
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .packages__header {
+    padding: 19px 64px;
+  }
+
+  .packages__title {
+    font-size: 18px;
+    line-height: 30px;
+  }
+
+  .packages__price {
+    font-size: 24px;
+    line-height: 30px;
+  }
+
+  .packages__offer {
+    font-size: 18px;
+    line-height: 30px;
+    padding: 14px 21px;
+    width: 191px;
+  }
+
+  .packages__header {
+  &--hit::before {
+    background: url("../img/bg-hit.svg") no-repeat;
+    background-size: cover;
+    height: 73px;
+    width: 73px;
+  }
+
+  &--hit::after {
+    height: 73px;
+    left: 6px;
+    top: 10px;
+    width: 73px;
+  }
+}
 }
