--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -3,15 +3,25 @@
   color: #283645;
 }
 
+.review__wrapper {
+  margin: 0;
+  overflow: hidden;
+  padding: 37px 0 25px;
+}
+
 .review__list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
   list-style: none;
   margin: 0 auto;
-  padding: 20px 0;
+  padding: 0;
 }
 
 .review__item {
   margin: 0;
-  padding: 0;
+  padding: 0 25px;
+  width: 320px;
 }
 
 .review__name {
@@ -21,17 +31,96 @@
   line-height: 30px;
   margin: 5px auto;
   padding: 0;
+  text-align: center;
+}
+
+.review__information {
+  display: none;
 }
 
 .review__description {
   font-size: 14px;
   font-weight: normal;
   line-height: 30px;
-  margin: 20px auto;
+  margin: 13px auto;
   padding: 0;
+  text-align: center;
 }
 
 .review__toggles {
-  margin: 0;
+  margin: 20px 0;
   padding: 0;
+}
+
+@media (min-width: @tablet-width) {
+  .review__wrapper {
+    padding: 25px 0 20px;
+  }
+  .review__item {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 620px;
+  }
+  .review__user {
+    margin-top: 22px;
+    order: 1;
+  }
+  .review__name {
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0 auto;
+  }
+  .review__information {
+    display: inline-block;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 30px;
+    margin: 2px auto;
+  }
+  .review__description {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .review__toggles {
+    margin: 33px 0 1px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .review {
+    padding: 146px 0 0;
+    position: relative;
+
+    &::before {
+      background: url("../img/icon-quotes.svg") no-repeat;
+      content: "";
+      height: 63px;
+      left: 0;
+      margin: 0 auto;
+      position: absolute;
+      right: 0;
+      top: 72px;
+      width: 79px;
+    }
+  }
+  .review__wrapper {
+    padding-bottom: 0;
+  }
+  .review__item {
+    width: 665px;
+  }
+  .review__user {
+    margin-top: 24px;
+  }
+  .review__name {
+    font-size: 24px;
+  }
+  .review__information {
+    font-size: 18px;
+  }
+  .review__toggles {
+    margin-bottom: 0;
+  }
 }
