--- a/source/less/blocks/round-button.less
+++ b/source/less/blocks/round-button.less
@@ -4,3 +4,10 @@
   font-weight: bold;
   line-height: 18px;
 }
+
+@media (min-width: @desktop-width) {
+  .round-button {
+    font-size: 21px;
+    line-height: 21px;
+  }
+}
