--- a/source/less/blocks/section-header.less
+++ b/source/less/blocks/section-header.less
@@ -6,6 +6,34 @@
 .section-header__hook {
   font-size: 24px;
   font-weight: lighter;
-  margin: 40px auto;
+  line-height: 30px;
+  margin: 27px auto;
   padding: 0;
+  text-align: center;
+
+}
+
+@media (min-width: @tablet-width) {
+
+  .section-header__hook {
+    font-size: 40px;
+    line-height: 48px;
+    margin: 0 auto;
+
+    &--narrow {
+      padding: 0 20px;
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .section-header__hook {
+    font-size: 50px;
+    line-height: 60px;
+    margin: 0 auto;
+
+    &--narrow {
+      padding: 0 226px;
+    }
+  }
 }
