--- a/source/less/blocks/user-upload.less
+++ b/source/less/blocks/user-upload.less
@@ -2,7 +2,7 @@
   background-color: #f2f2f2;
   font-family: "Open Sans", sans-serif;
   margin: 0;
-  padding: 20px;
+  padding: 20px 0;
 }
 
 .user-upload__photo {
@@ -10,7 +10,6 @@
   height: 374px;
   margin: 0 auto;
   overflow: hidden;
-  padding: 0;
   width: 280px;
 }
 
@@ -23,15 +22,17 @@
 
 .user-upload__buttons {
   border-top: 1px solid #dddfe0;
-  margin: 0;
-  padding: 0;
+  margin: 13px 0 0;
+  padding: 27px 15px 10px;
 }
 
 .user-upload__button {
+  display: block;
   background-color: transparent;
   margin: 12px auto;
-  padding: 17px;
-  width: 274px;
+  padding: 15px;
+  text-align: center;
+  width: 280px;
 
   &--upload {
     border: 3px solid #d22856;
@@ -62,5 +63,59 @@
       color: #ffffff;
       opacity: 0.3;
     }
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .user-upload {
+    align-items: flex-end;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    padding: 29px 20px 33px;
+  }
+  .user-upload__photo {
+    height: 400px;
+    margin: 0;
+    margin-bottom: 21px;
+    width: 300px;
+  }
+  .user-upload__buttons {
+    border: none;
+    margin: 0;
+    padding: 0 13px;
+    padding-top: 24px;
+  }
+  .user-upload__button {
+    margin: 23px auto;
+    width: 259px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .user-upload {
+    margin: 0 auto;
+    margin-bottom: 25px;
+    padding: 25px 36px 35px 81px;
+    max-width: 825px;
+  }
+
+  .user-upload__photo {
+      margin-bottom: 23px;
+  }
+
+  .user-upload__buttons {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 41px;
+    padding: 0;
+    padding-top: 60px;
+    width: 456px;
+  }
+
+  .user-upload__button {
+    margin: 22px auto;
+    width: 178px;
   }
 }
