--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,4 @@
+@import "variables.less";
 @import "fonts.less";
 @import "global.less";
 @import "blocks/visually-hidden.less";
@@ -7,10 +8,11 @@
 @import "blocks/hero.less";
 @import "blocks/round-button.less";
 @import "blocks/device.less";
+@import "blocks/information.less";
 @import "blocks/section-header.less";
 @import "blocks/features.less";
+@import "blocks/effect.less";
 @import "blocks/description.less";
-@import "blocks/information.less";
 @import "blocks/review.less";
 @import "blocks/price.less";
 @import "blocks/packages.less";
