--- a/source/less/blocks/contacts-list.less
+++ b/source/less/blocks/contacts-list.less
@@ -46,7 +46,6 @@
     }
   }
 }
-
 @media (min-width: @tablet-width) {
   .contacts-list {
     align-items: center;
@@ -54,16 +53,17 @@
     flex-wrap: wrap;
     justify-content: center;
   }
+
   .contacts-list__item {
     margin: 23px 32px;
     width: 245px;
   }
+
   .contacts-list__address {
     line-height: 31px;
     margin: 3px auto;
   }
 }
-
 @media (min-width: @desktop-width) {
   .contacts-list {
     align-items: flex-start;
@@ -71,6 +71,7 @@
     margin-top: 32px;
     padding: 0 106px;
   }
+
   .contacts-list__item {
     margin: 23px 32px 0;
 
@@ -78,10 +79,12 @@
       order: 1;
     }
   }
+
   .contacts-list__title {
     margin-bottom: 23px;
   }
+
   .contacts-list__address {
-    margin: 0px auto;
+    margin: 0 auto;
   }
 }
