--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -20,30 +20,29 @@
 .description__line {
   display: none;
 }
-
 @media (min-width: @tablet-width) {
   .description {
     font-size: 18px;
     line-height: 30px;
     margin: 92px 0 20px;
-    padding: 0px 59px;
+    padding: 0 59px;
 
     &--photo-middle {
       margin: 56px 0 70px;
     }
   }
+
   .description__line {
     display: inline;
   }
 }
-
 @media (min-width: @desktop-width) {
   .description {
-    padding: 0px 211px;
+    padding: 0 211px;
 
     &--narrow {
       margin: 91px 0 89px;
-      padding: 0px 299px;
+      padding: 0 299px;
     }
 
     &--photo-middle {
