--- a/source/less/blocks/users-posts.less
+++ b/source/less/blocks/users-posts.less
@@ -112,7 +112,6 @@
     width: 13px;
   }
 }
-
 @media (max-width: @mobile-only) {
   .users-posts__like::before {
     align-items: center;
@@ -122,7 +121,6 @@
     left: 0;
   }
 }
-
 @media (min-width: @tablet-width) {
   .users-posts {
     align-items: center;
@@ -133,13 +131,12 @@
   }
 
   .users-posts__item {
-    margin: 10px 10px;
+    margin: 10px;
     width: 300px;
 
     &--pano {
       width: 100%;
-      margin: 0;
-      margin-bottom: 38px;
+      margin: 0 0 38px;
     }
   }
 
@@ -170,7 +167,7 @@
       flex-wrap: wrap;
       justify-content: space-between;
       height: auto;
-      padding: 24px 27px 24px;
+      padding: 24px 27px;
       width: 564px;
     }
   }
@@ -203,52 +200,53 @@
     }
   }
 }
+@media (min-width: @desktop-width) {
+  .users-posts {
+    margin-bottom: 0;
+  }
 
-  @media (min-width: @desktop-width) {
-    .users-posts {
-      margin-bottom: 0;
-    }
+  .users-posts__item {
+    margin-bottom: 43px;
 
-    .users-posts__item {
-      margin-bottom: 43px;
-
-      &--pano {
-        margin-bottom: 38px;
-      }
-    }
-
-    .users-posts__title {
-      padding: 6px 20px;
-      right: 130px;
-      top: 54px;
-    }
-    .users-posts__photo {
-      height: 400px;
-
-      &--pano {
-        height: 506px;
-      }
-    }
-    .users-posts__article {
-
-      &--pano {
-        width: 885px;
-      }
-    }
-    .users-posts__like {
-      padding: 0 37px 0 0;
-
-      &::before {
-        margin: auto 0;
-        right: 4px;
-      }
-
-      &--pano::before {
-        right: 4px;
-      }
-    }
-
-    .user-posts__description {
-      margin: 0px 0 2px;
+    &--pano {
+      margin-bottom: 38px;
     }
   }
+
+  .users-posts__title {
+    padding: 6px 20px;
+    right: 130px;
+    top: 54px;
+  }
+
+  .users-posts__photo {
+    height: 400px;
+
+    &--pano {
+      height: 506px;
+    }
+  }
+
+  .users-posts__article {
+    &--pano {
+      width: 885px;
+    }
+  }
+
+  .users-posts__like {
+    padding: 0 37px 0 0;
+
+    &::before {
+      margin: auto 0;
+      right: 4px;
+    }
+
+    &--pano::before {
+      right: 4px;
+    }
+  }
+
+  .user-posts__description {
+    margin: 0 0 2px;
+  }
+}
