--- a/source/less/blocks/btn-form.less
+++ b/source/less/blocks/btn-form.less
@@ -24,13 +24,9 @@
     background-color: #e5e5e5;
   }
 }
-
 @media (min-width: @tablet-width) {
   .btn-form {
     width: 298px;
   }
 }
-
-@media (min-width: @desktop-width) {
-
-}
+@media (min-width: @desktop-width) {}
