--- a/source/less/blocks/edit-photo.less
+++ b/source/less/blocks/edit-photo.less
@@ -116,7 +116,6 @@
   border-radius: 1.3px;
   border: 0.2px solid #010101;
 }
-
 @media (min-width: @tablet-width) {
   .edit-photo {
     align-items: center;
@@ -124,21 +123,24 @@
     justify-content: center;
     padding: 0;
   }
+
   .edit-photo__tools-list {
     flex-direction: column;
     margin: 0;
   }
+
   .edit-photo__tool-item {
     border-bottom: 1px solid #dddfe0;
     height: 22px;
-    margin: 19px 0 6px 0;
-    padding: 0 22px 24px 0px;
+    margin: 19px 0 6px;
+    padding: 0 22px 24px 0;
     width: 22px;
 
     &:first-child {
       margin-top: 24px;
     }
   }
+
   .edit-photo__tool {
     fill: #d22856;
 
@@ -151,26 +153,27 @@
       width: 16px;
     }
   }
+
   .edit-photo__range-list {
     flex-direction: column;
     margin: 0;
   }
+
   .edit-photo__range-item {
     border-bottom: 1px solid #dddfe0;
     display: block;
     padding-bottom: 30px;
-    margin: 0;
-    margin-bottom: 19px;
+    margin: 0 0 19px;
 
-      &:first-child {
-        margin-top: 31px;
-      }
+    &:first-child {
+      margin-top: 31px;
     }
+  }
+
   .edit-photo__range {
     width: 202px;
   }
 }
-
 @media (min-width: @desktop-width) {
   .edit-photo__tool-item {
     height: 48px;
@@ -178,7 +181,6 @@
   }
 
   .edit-photo__tool {
-
     &--contrast {
       height: 32px;
       width: 32px;
@@ -186,8 +188,8 @@
   }
 
   .edit-photo__tool-item {
-    margin: 10px 0 4px 0;
-    padding: 0 39px 9px 0px;
+    margin: 10px 0 4px;
+    padding: 0 39px 9px 0;
 
     &:first-child {
       margin-top: 13px;
@@ -205,6 +207,6 @@
   }
 
   .edit-photo__range {
-      width: 290px;
+    width: 290px;
   }
 }
