--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -36,8 +36,7 @@
   font-size: 14px;
   font-weight: normal;
   line-height: 18px;
-  margin: 0 auto;
-  margin-top: 42px;
+  margin: 42px auto 0;
   padding: 0;
   text-align: center;
 }
@@ -66,7 +65,6 @@
     opacity: 0.3;
   }
 }
-
 @media (min-width: @tablet-width) {
   .page-footer {
     flex-direction: row;
@@ -76,15 +74,15 @@
       display: flex;
     }
   }
+
   .page-footer__logo {
-    margin: 0;
-    margin-left: 7px;
+    margin: 0 0 0 7px;
   }
+
   .page-footer__credits {
     margin: 0;
   }
 }
-
 @media (min-width: @desktop-width) {
   .page-footer {
     padding: 72px 123px;
