--- a/source/less/blocks/pop-up.less
+++ b/source/less/blocks/pop-up.less
@@ -48,7 +48,6 @@
     padding: 50px 0;
   }
 }
-
 @media (min-width: @tablet-width) {
   .pop-up {
     width: 461px;
@@ -58,19 +57,19 @@
       height: 406px;
     }
   }
+
   .pop-up__title {
     font-size: 30px;
     line-height: 40px;
   }
+
   .pop-up__desctiption {
     font-size: 18px;
     line-height: 24px;
   }
+
   .pop-up__text {
     padding: 0 76px;
   }
 }
-
-@media (min-width: @desktop-width) {
-
-}
+@media (min-width: @desktop-width) {}
