--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -10,8 +10,7 @@
 
 .price__packages {
   list-style: none;
-  margin: 0;
-  margin-left: -258px;
+  margin: 0 0 0 -258px;
   padding: 0;
 }
 
@@ -20,22 +19,19 @@
   margin: 43px auto;
   padding: 0;
 }
-
 @media (min-width: @tablet-width) {
   .price {
     padding-bottom: 69px;
     padding-top: 89px;
   }
+
   .price__packages {
     margin: 0;
   }
-
 }
-
 @media (min-width: @desktop-width) {
   .price {
     padding-bottom: 95px;
     padding-top: 143px;
   }
-
 }
