--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -43,18 +43,16 @@
     opacity: 0.3;
   }
 }
-
 @media (min-width: @tablet-width) {
   .social {
-    margin: 0;
-    margin-right: 15px;
+    margin: 0 15px 0 0;
   }
 }
-
 @media (min-width: @desktop-width) {
   .social {
     margin-left: 22px;
   }
+
   .social__item {
     margin: 0 9px;
   }
