--- a/source/less/blocks/user-upload.less
+++ b/source/less/blocks/user-upload.less
@@ -65,7 +65,6 @@
     }
   }
 }
-
 @media (min-width: @tablet-width) {
   .user-upload {
     align-items: flex-end;
@@ -74,34 +73,33 @@
     justify-content: space-between;
     padding: 29px 20px 33px;
   }
+
   .user-upload__photo {
     height: 400px;
-    margin: 0;
-    margin-bottom: 21px;
+    margin: 0 0 21px;
     width: 300px;
   }
+
   .user-upload__buttons {
     border: none;
     margin: 0;
-    padding: 0 13px;
-    padding-top: 24px;
+    padding: 24px 13px 0;
   }
+
   .user-upload__button {
     margin: 23px auto;
     width: 259px;
   }
 }
-
 @media (min-width: @desktop-width) {
   .user-upload {
-    margin: 0 auto;
-    margin-bottom: 25px;
+    margin: 0 auto 25px;
     padding: 25px 36px 35px 81px;
     max-width: 825px;
   }
 
   .user-upload__photo {
-      margin-bottom: 23px;
+    margin-bottom: 23px;
   }
 
   .user-upload__buttons {
@@ -109,8 +107,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 41px;
-    padding: 0;
-    padding-top: 60px;
+    padding: 60px 0 0;
     width: 456px;
   }
 
