--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -21,6 +21,8 @@
 }
 
 .page-footer__logo-image {
+  fill: #283645;
+
   &:hover {
     fill: #d22856;
   }
@@ -66,6 +68,14 @@
   }
 }
 
+.page-footer__glasses-desktop {
+  display: none;
+}
+
+.page-footer__stars {
+  display: none;
+}
+
 @media (min-width: @tablet-width) {
   .page-footer {
     flex-direction: row;
@@ -93,5 +103,17 @@
   .page-footer__credits {
     font-size: 18px;
     line-height: 18px;
+  }
+
+  .page-footer__glasses {
+    display: none;
+  }
+
+  .page-footer__glasses-desktop {
+    display: block;
+  }
+
+  .page-footer__stars {
+    display: block;
   }
 }
